fixed overlapping buttons on popup

--- a/themes/sgsc/sass/_footer.scss
+++ b/themes/sgsc/sass/_footer.scss
@@ -106,7 +106,8 @@ input.wpcf7-submit {
 	color: $black;
 	font-family: lato,novecentosanswide,sans-serif;
 	font-weight: 400;
-	padding: 0;
+  padding: 0;
+  display: flex;
 }
 
 .popup-entry {
